--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="bengkel2022">
+  <meta name="apple-mobile-web-app-title" content="Proggram Bengkel 2022">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
