--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
 </head>
 
 <body>
+<div style="text-align: center">
+    <p>Program by Pande Gede Eka Deskontara.</p>
+<h1 id='foo'>Loading ......!</h1>
+  
+</div>
+  
+  
+  <script>
+    setTimeout(function () { document.querySelector('#foo').style.display = 'none' }, 5000);
+  </script>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
