--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
 </head>
 
 <body>
+<style>
+.container {
+  margin: 10;
+  height: 200px;
+  position: relative;
+  border: 3px solid green;
+}
+
+.vertical-center {
+  margin: 20;
+  position: absolute;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+}
+</style>
 <div style="text-align: center">
     <p>Program by Pande Gede Eka Deskontara.</p>
 <h1 id='foo'>Loading ......!</h1>
